# triangle_cubature

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
notebooks/: exact_integration_dev.ipynb
src/dev_tools/: __init__.py  polynomials.py  utils.py
src/triangle_cubature/: __init__.py  integrate.py  rule_factory.py  transformations.py  weights_and_coordinates.py
tests/auto/: test_cubature_rules.py  test_midpoint.py  test_polynomial.py  test_transformations.py
